Moving to LaravelUp (laravel-up)

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-APP_NAME=Luna
+APP_NAME=LaravelUp
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://luna.loc
+APP_URL=http://laravel-up.loc
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=luna
+DB_DATABASE=laravel_up
 DB_USERNAME=root
 DB_PASSWORD=root
 
@@ -19,8 +19,8 @@ SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=mailgun
-MAIL_FROM_ADDRESS=app@luna.loc
-MAIL_FROM_NAME=Luna
+MAIL_FROM_ADDRESS=app@laravel-up.loc
+MAIL_FROM_NAME=LaravelUp
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
 
@@ -33,7 +33,7 @@ GOOGLE_RECAPTCHA_SECRET=
 DISQS_WEBSITE=test
 
 JS_ENV=local
-JS_APP_URL=http://luna.loc
+JS_APP_URL=http://laravel-up.loc
 
 #
 # Development
