--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "movor/luna",
+    "name": "movor/laravel-up",
     "type": "project",
     "description": "Laravel framework packed with tools to get started fast",
     "keywords": [
