Improve .env file TR-sUF1GaX3

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,25 @@
+#
+#--------------------------------------------------------------------------
+# Laravel
+#--------------------------------------------------------------------------
+#
+
+#
+# General
+#
+
 APP_NAME=LaravelUp
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://laravel-up.loc
+APP_TIMEZONE=UTC
+APP_LOCALE=sr
+
+#
+# Database, session, cache, broadcast and queue
+#
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
@@ -13,10 +29,17 @@ DB_USERNAME=root
 DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
+
 CACHE_DRIVER=file
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
 QUEUE_DRIVER=sync
+
+#
+# Mail
+#
 
 MAIL_DRIVER=mailgun
 MAIL_FROM_ADDRESS=app@laravel-up.loc
@@ -24,24 +47,73 @@ MAIL_FROM_NAME=LaravelUp
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
 
+#
+#--------------------------------------------------------------------------
+# Services
+#--------------------------------------------------------------------------
+#
+
+#
+# Admin panel
+#
+
+BACKPACK_LICENSE=
+
+#
+# Social login
+#
+
+# https://developers.facebook.com/apps
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+
+# https://www.linkedin.com/developers/apps
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
+
+# https://console.developers.google.com/apis/credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+#
+# Analytics
+#
+
+# https://console.developers.google.com/cloud-resource-manager
 GOOGLE_ANALYTICS_KEY=
 
-# Obtain at https://www.google.com/recaptcha/admin
+#
+# Recaptcha
+#
+
+# https://www.google.com/recaptcha/admin
 GOOGLE_RECAPTCHA_KEY=
 GOOGLE_RECAPTCHA_SECRET=
 
+#
+# Disqs
+#
+
 DISQS_WEBSITE=test
+
+#
+#--------------------------------------------------------------------------
+# Javascript
+#--------------------------------------------------------------------------
+#
 
 JS_ENV=local
 JS_APP_URL=http://laravel-up.loc
 
 #
+#--------------------------------------------------------------------------
 # Development
+#--------------------------------------------------------------------------
 #
 
 # Force recipient to be always the same (set valid email address here). Handy while developing
 #MAIL_FORCE_RECIPIENT=
 #MAIL_FORCE_RECIPIENT_NAME=
 
-# While seeding in dev env, how much chance there is to use image across models
+# While seeding in dev environment, how much chance there is to use image across models
 #DEV_SEED_IMAGE_CHANCE=0
