Mailgun endpoint to .env.example file TR-4MtARqiD

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,7 @@ MAIL_FROM_ADDRESS=app@laravel-up.loc
 MAIL_FROM_NAME=LaravelUp
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
+MAILGUN_ENDPOINT=
 
 #
 #--------------------------------------------------------------------------
