--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "backpack/crud": "^3.5",
         "barryvdh/laravel-cors": "^0.11.2",
         "barryvdh/laravel-elfinder": "^0.4.1",
+        "cviebrock/eloquent-sluggable": "^4.6",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
