--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://laravel-up.loc
+APP_URL=http://localhost
 APP_TIMEZONE=UTC
-APP_LOCALE=sr
+APP_LOCALE=en
 
 #
 # Database, session, cache, broadcast and queue
@@ -42,7 +42,7 @@ QUEUE_DRIVER=sync
 #
 
 MAIL_DRIVER=mailgun
-MAIL_FROM_ADDRESS=app@laravel-up.loc
+MAIL_FROM_ADDRESS=laravel_up@localhost
 MAIL_FROM_NAME=LaravelUp
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
