--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/vendor.js": "/js/vendor.js",
-    "/css/vendor.css": "/css/vendor.css",
-    "/css/layout_default.css": "/css/layout_default.css",
-    "/css/layout_error.css": "/css/layout_error.css"
+    "/js/app.min.js": "/js/app.min.js?id=4764c0cecbae294a6a2c",
+    "/js/vendor.min.js": "/js/vendor.min.js?id=343571be9384923301a1",
+    "/css/vendor.min.css": "/css/vendor.min.css?id=add7d8261a28f2db3bb9",
+    "/css/app.min.css": "/css/app.min.css?id=1d0ef62b4dc5aa534eab"
 }
