Better handling of compiled assets - TR-5sa26IKs

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,15 @@ yarn-error.log
 /vendor
 
 #
+# Compiled assets
+#
+
+public/js/*
+public/css/*
+!public/js/*.min.js
+!public/css/*.min.css
+
+#
 # Laravel IDE helper
 #
 
