Load environment specific env file TR-N678tJ8w

--- a/.env.example
+++ b/.env.example
@@ -14,15 +14,13 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-APP_TIMEZONE=UTC
-APP_LOCALE=en
 
 #
 # Database, session, cache, broadcast and queue
 #
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=laravel_up
 DB_USERNAME=root
@@ -38,15 +36,20 @@ SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
 #
+# Upload image quality
+#
+
+UPLOAD_IMAGE_QUALITY=85
+
+#
 # Mail
 #
 
 MAIL_DRIVER=mailgun
-MAIL_FROM_ADDRESS=laravel_up@localhost
+MAIL_FROM_ADDRESS=app@laravel-up
 MAIL_FROM_NAME=LaravelUp
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
-MAILGUN_ENDPOINT=
 
 #
 #--------------------------------------------------------------------------
@@ -55,32 +58,9 @@ MAILGUN_ENDPOINT=
 #
 
 #
-# Admin panel
-#
-
-BACKPACK_LICENSE=
-
-#
-# Social login
-#
-
-# https://developers.facebook.com/apps
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
-
-# https://www.linkedin.com/developers/apps
-LINKEDIN_CLIENT_ID=
-LINKEDIN_CLIENT_SECRET=
-
-# https://console.developers.google.com/apis/credentials
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-
-#
 # Analytics
 #
 
-# https://console.developers.google.com/cloud-resource-manager
 GOOGLE_ANALYTICS_KEY=
 
 #
@@ -99,22 +79,18 @@ DISQS_WEBSITE=test
 
 #
 #--------------------------------------------------------------------------
+# Backpack Admin
+#--------------------------------------------------------------------------
+#
+
+BACKPACK_LICENSE=
+BACKPACK_REGISTRATION_OPEN=false
+
+#
+#--------------------------------------------------------------------------
 # Javascript
 #--------------------------------------------------------------------------
 #
 
 JS_ENV=local
-JS_APP_URL=http://laravel-up.loc
-
-#
-#--------------------------------------------------------------------------
-# Development
-#--------------------------------------------------------------------------
-#
-
-# Force recipient to be always the same (set valid email address here). Handy while developing
-#MAIL_FORCE_RECIPIENT=
-#MAIL_FORCE_RECIPIENT_NAME=
-
-# While seeding in dev environment, how much chance there is to use image across models
-#DEV_SEED_IMAGE_CHANCE=0
+JS_APP_URL=http://localhost:9080
